finalização de buscas de usuario e venda
