# src/routes/UsuarioRoutes.ts
@@ -22,6 +22,12 @@ router.delete("/delete/:id", async (req: Request, res: Response) => {
   return res.status(response.error ? 400 : 200).send(response)
 })
 
+router.get("/getAll", async (req: Request, res: Response) => {
+  const response = await controller.getAll()
+
+  return res.status(response.error ? 400 : 200).send(response)
+})
+
 router.post("/getEmail", async (req: Request, res: Response) => {
   const response = await controller.getEmail(req.body)
 
